<?xml version="1.0" encoding="UTF-8"?>
<project  xmlns="http://maven.apache.org/POM/4.0.0" 
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <groupId>org.matsim</groupId>
  <artifactId>matsim</artifactId>
  <name>MATSim</name>
  <version>0.1.0-SNAPSHOT</version>
  <description></description>
  <url>matsim.org</url>
  <inceptionYear>2005</inceptionYear>
  <licenses>
    <license>
      <name>GNU General Public License</name>
      <url>{BASEDIR}/COPYING</url>
      <comments>See also the LICENSE file</comments>
    </license>
  </licenses>
  <build>
  	<defaultGoal>compiler:compile</defaultGoal>
    <sourceDirectory>src/</sourceDirectory>
    <testSourceDirectory>test/src/</testSourceDirectory>
    <outputDirectory>bin/</outputDirectory>
    <testOutputDirectory>bin/</testOutputDirectory>
    
    <resources>
      <resource>
        <directory>./</directory>
        <includes>
          <include>res/**/*.*</include>
          <include>dtd/**/*.*</include>
        </includes>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.6</source>
          <target>1.6</target>
          <showWarnings>false</showWarnings>
          <showDeprecation>false</showDeprecation>
          <!-- configure initial and maximal memory for compiling -->
          <fork>true</fork>
          <meminitial>128m</meminitial>
          <maxmem>512m</maxmem>
          <compilerArguments>
            <Xmaxwarns>4000</Xmaxwarns>
            <Xmaxerrs>100</Xmaxerrs>
          </compilerArguments>
          <!-- Uncommenting the following lines can be used to in- or exclude
          sources from compilation -->
          <includes>
            <include>org/matsim/**/*.java</include>
            <include>tutorial/**/*.java</include>
          </includes>
<!--          <excludes>-->
<!--            <exclude></exclude>-->
<!--          </excludes>-->
          <!-- Uncommenting the following lines can be used to in- or exclude
          TEST sources from compilation -->
<!--          <testExcludes>-->
<!--            <exclude>org/matsim/testcases/TestDepth.java</exclude>-->
<!--          </testExcludes>-->
<!--          <testIncludes>-->
<!--            <include>org/matsim/testcases/TestDepth</include>-->
<!--          </testIncludes>-->
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.4</version>
        <configuration>
          <excludes>
            <exclude>**/*$*</exclude> <!-- exclude all inner classes -->
            <exclude>org/matsim/testcases/TestDepth.java</exclude>
            <exclude>org/matsim/**/*AllTests*.java</exclude>
            <exclude>org/matsim/SimpleTests.java</exclude>
            <exclude>org/matsim/testcases/MatsimTestCase.java</exclude>
          </excludes>
          <forkMode>once</forkMode>
          <!-- avoid out of memory errors: -->
          <argLine>-Xmx600m</argLine>
          <enableAssertions>false</enableAssertions> <!-- this should be set to true, but we still have some tests that don't work otherwise... -->
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <configuration>
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
        </configuration>
      </plugin>
    </plugins>
  </build>
  
  <reporting>
    <!-- this plugin generates a html test report -->
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-report-plugin</artifactId>
        <version>2.4.3</version>
      </plugin>
    </plugins>
  </reporting>
  
  <repositories>
    <repository>
      <id>geotools</id>
      <name>Geotools repository</name>
      <url>http://maven.geotools.fr/repository</url>
    </repository>
    <repository>
      <id>ibiblio</id>
      <name>Ibiblio - the public's library and digital archive</name>
      <url>http://www.ibiblio.org/maven2</url>
    </repository>
    <repository>
      <id>org.codehaus.mojo</id>
      <url>http://repository.codehaus.org/org/codehaus/mojo/</url>
    </repository>
    <repository>
      <id>matsim</id>
      <url>http://matsim.org/m2repo</url>
    </repository>
  </repositories>
  
  <profiles>
    <profile>
      <id>jdk16profile</id>
      <activation>
        <jdk>1.6</jdk>
      </activation>
      <build>
        <plugins>
          <plugin>
            <artifactId>maven-compiler-plugin</artifactId>
            <configuration>
              <configuration>
          <source>1.6</source>
          <target>1.6</target>
          <showWarnings>false</showWarnings>
          <showDeprecation>false</showDeprecation>
          <!-- configure initial and maximal memory for compiling -->
          <fork>true</fork>
          <meminitial>128m</meminitial>
          <maxmem>512m</maxmem>
          <compilerArguments>
            <Xmaxwarns>4000</Xmaxwarns>
            <Xmaxerrs>100</Xmaxerrs>
          </compilerArguments>
          <!--<compilerArgument>-Djava.endorsed.dirs=${basedir}/libs/endorsed -Djava.awt.headless=true</compilerArgument>-->
          <!-- Uncommenting the following lines can be used to in- or exclude
          sources from compilation -->
          <includes>
            <include>org/matsim/**/*.java</include>
            <include>tutorial/**/*.java</include>
             <include>playground/**/*.java</include>
<!--             <include>de/schlichtherle/**/*.java</include>-->
          </includes>    
        </configuration>
            </configuration>
          </plugin>
          <plugin>
          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
            <version>2.4</version>
              <configuration>
                <excludes>
                  <exclude>**/*$*</exclude> <!-- exclude all inner classes -->
                  <exclude>org/matsim/testcases/TestDepth.java</exclude>
                  <exclude>org/matsim/**/*AllTests*.java</exclude>
                  <exclude>org/matsim/**/*SimpleTests.java</exclude>
                  <exclude>org/matsim/testcases/MatsimTestCase.java</exclude>
          </excludes>
          <forkMode>once</forkMode>
          <!-- avoid out of memory errors: -->
          <argLine>-Xmx600m -Djava.endorsed.dirs=${basedir}/libs/endorsed -Djava.awt.headless=true</argLine>
          <enableAssertions>false</enableAssertions> <!-- this should be set to true, but we still have some tests that don't work otherwise... -->
        </configuration>
          </plugin>
        </plugins>      
      </build>
    </profile>

	<profile>
		<!-- special settings for some plugins only used on the hudson build server -->
		<!-- must be manually activated with "mvn -Phudson ..." and the corresponding goals -->
		<id>hudson</id>
		<build>
			<pluginManagement>
				<plugins>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>cobertura-maven-plugin</artifactId>
						<version>2.3</version>
						<configuration>
							<formats>
								<format>xml</format>
							</formats>
						</configuration>
					</plugin>
				</plugins>
			</pluginManagement>
		</build>
		<reporting>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-pmd-plugin</artifactId>
					<version>2.4</version>
					<configuration>
						<targetJdk>1.6</targetJdk>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>javancss-maven-plugin</artifactId>
					<version>2.0</version>
				</plugin>
			</plugins>
		</reporting>
	</profile>

  </profiles>

  <dependencies>
    <dependency>
      <groupId>gov.nist.math.javanumerics</groupId>
  		<artifactId>jama</artifactId>
  		<version>1.0.2</version>
    </dependency>
    <dependency>
      <groupId>trove</groupId>
      <artifactId>trove</artifactId>
      <version>2.0.3</version>
    </dependency>
    <dependency>
      <groupId>jgap</groupId>
      <artifactId>jgap</artifactId>
      <version>3.4.1</version>
    </dependency>
    <dependency>
      <groupId>jogl</groupId>
			<artifactId>jogl</artifactId>
			<version>1.1.1</version>
    </dependency>
    <dependency>
      <groupId>jogl</groupId>
			<artifactId>gluegen-rt</artifactId>
			<version>1.1.1</version>
    </dependency>
    <dependency>
      <groupId>kml</groupId>
      <artifactId>kml</artifactId>
      <version>2.2.0</version>
    </dependency>
    <dependency>
    	<groupId>org.prefuse</groupId>
  		<artifactId>prefuse</artifactId>
  		<version>2007.10.21</version>
    </dependency>
    <!-- jaxb 2.1.7 dependencies -->
    <dependency>
      <groupId>javax.xml.bind.jaxb</groupId>
  		<artifactId>activation</artifactId>
  		<version>2.1.7</version>
    </dependency>
    <dependency>
      <groupId>javax.xml.bind.jaxb</groupId>
  		<artifactId>jaxb-api</artifactId>
			<version>2.1.7</version>
    </dependency>
    <dependency>
      <groupId>javax.xml.bind.jaxb</groupId>
  		<artifactId>jaxb-impl</artifactId>
			<version>2.1.7</version>
    </dependency>
    <dependency>
			<groupId>javax.xml.bind.jaxb</groupId>
			<artifactId>jaxb-xjc</artifactId>
			<version>2.1.7</version>
    </dependency>
<!--    <dependency>-->
<!--      <groupId>javax.xml.bind</groupId>-->
<!--      <artifactId>jaxb-1impl-217</artifactId>-->
<!--      <version>2.1.7</version>-->
<!--      <scope>system</scope>-->
<!--      <systemPath>${basedir}/libs/jaxb-2.1.7/lib/jaxb1-impl.jar</systemPath>-->
<!--    </dependency>-->
    <dependency>
      <groupId>javax.xml.bind.jaxb</groupId>
  		<artifactId>jsr173</artifactId>
			<version>2.1.7</version>
    </dependency>
    <dependency>
      <groupId>edu.ucar.unidata.netcdf-java</groupId>
  		<artifactId>netcdfAll</artifactId>
  		<version>4.0.0</version>
    </dependency>
    <!--End of jaxb 2.1.7 dependencies -->
    <dependency>
      <groupId>org.geotools</groupId>
      <artifactId>gt2-main</artifactId>
      <version>2.3.5</version>
    </dependency>
    <dependency>
      <groupId>org.geotools</groupId>
      <artifactId>gt2-shapefile</artifactId>
      <version>2.3.5</version>
    </dependency>
    <dependency>
      <groupId>org.geotools</groupId>
      <artifactId>gt2-postgis</artifactId>
      <version>2.3.5</version>
    </dependency>
    <dependency>
      <groupId>org.geotools</groupId>
      <artifactId>gt2-wfs</artifactId>
      <version>2.3.5</version>
    </dependency>
    <dependency>
      <groupId>org.geotools</groupId>
      <artifactId>gt2-wms</artifactId>
      <version>2.3.5</version>
    </dependency>
    <dependency>
      <groupId>colt</groupId>
      <artifactId>colt</artifactId>
      <version>1.2.0</version>
    </dependency>
    <dependency>
      <groupId>commons-collections</groupId>
      <artifactId>commons-collections</artifactId>
      <version>3.2</version>
    </dependency>
    <dependency>
      <groupId>jfree</groupId>
      <artifactId>jfreechart</artifactId>
      <version>1.0.7</version>
    </dependency>
    <dependency>
      <groupId>jung</groupId>
      <artifactId>jung</artifactId>
      <version>1.7.6</version>
    </dependency>
    <dependency>
      <groupId>log4j</groupId>
      <artifactId>log4j</artifactId>
      <version>1.2.15</version>
      <exclusions>
        <exclusion>
          <groupId>javax.mail</groupId>
          <artifactId>mail</artifactId>
        </exclusion>
        <exclusion>
          <groupId>javax.jms</groupId>
          <artifactId>jms</artifactId>
        </exclusion>
        <exclusion>
          <groupId>com.sun.jdmk</groupId>
          <artifactId>jmxtools</artifactId>
        </exclusion>
        <exclusion>
          <groupId>com.sun.jmx</groupId>
          <artifactId>jmxri</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>com.lowagie</groupId>
      <artifactId>itext</artifactId>
      <version>2.0.6</version>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>3.8.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>jfree</groupId>
      <artifactId>jcommon</artifactId>
      <version>1.0.9</version>
    </dependency>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>1.2</version>
    </dependency>
    <dependency>
      <groupId>xerces</groupId>
      <artifactId>xercesImpl</artifactId>
      <version>2.7.1</version>
    </dependency>
    <dependency>
    	<groupId>com.thoughtworks.xstream</groupId>
    	<artifactId>xstream</artifactId>
    	<version>1.3.1</version>
    </dependency>
    <dependency>
    	<groupId>dom4j</groupId>
    	<artifactId>dom4j</artifactId>
    	<version>1.6.1</version>
    </dependency>
    <dependency>
    	<groupId>org.apache.commons</groupId>
    	<artifactId>commons-math</artifactId>
    	<version>2.0</version>
    </dependency>
    <dependency>
    	<groupId>net.java.dev.timingframework</groupId>
    	<artifactId>timingframework</artifactId>
    	<version>1.0</version>
    </dependency>
    <dependency>
    	<groupId>de.schlichtherle.io</groupId>
    	<artifactId>truezip</artifactId>
    	<version>6.6</version>
    </dependency>
  </dependencies>
  <properties>
  	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
</project>
